# ulco-pf-etudiant

./: .gitignore  README.md
projets/hspaint/: hspaint.cabal
projets/hspaint/app/: Main.hs
projets/inventaire/: default.nix  inventaire.cabal
projets/inventaire/app/: Main.hs
projets/inventaire/data/: stock1.txt
projets/inventaire/src/: Inventaire.hs  Produit.hs  Stock.hs
projets/inventaire/test/: InventaireSpec.hs  ProduitSpec.hs  StockSpec.hs
projets/maze/: README.md  default.nix  hie.yaml  maze.cabal
projets/maze/app/: Main.hs
projets/maze/data/: maze1.txt
projets/todocli/: README.md  default.nix  hie.yaml  todocli.cabal
projets/todocli/app/: Main.hs
projets/todoweb/: default.nix  hie.yaml  todoweb.cabal
projets/todoweb/app/: Main.hs
projets/todoweb/public/: index.html
tp1/: env.cabal  hello.hs
tp2/: env.cabal
tp3/: cowsay.hs  hie.yaml
tp4/: fibo.hs
tp5/: env.cabal  hello.hs
tp6/exos/: shell.nix
tp6/spiral/: default.nix  hie.yaml  spiral.cabal
tp6/spiral/app/: Main.hs
tp6/todolist/: default.nix  hie.yaml  todolist.cabal
tp6/todolist/app/: Main.hs
tp6/webapp/: default.nix  hie.yaml  webapp.cabal
tp6/webapp/app/: Main.hs
tp7/hspaint/: default.nix  hie.yaml  hspaint.cabal
tp8/hangman/: default.nix  hangman.cabal  hie.yaml
tp8/hangman/app/hangman/: Main.hs
