cabal-version:      3.4
name:               inventaire
version:            0.1.0.0
license:            MIT
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Inventaire, Produit, Stock
    build-depends:    base, split
    hs-source-dirs:   src
    default-language: GHC2021

executable inventaire
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, inventaire
    hs-source-dirs:   app
    default-language: GHC2021

test-suite inventaire-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    InventaireSpec, ProduitSpec, StockSpec
    build-depends:    base, hspec, inventaire

