cabal-version:      2.2
name:               todolist
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base,
                        haskell-gi-base,
                        gi-cairo,
                        gi-gdk,
                        gi-glib,
                        gi-gtk,
                        gi-cairo-render,
                        gi-cairo-connector,
                        text

executable todolist
    import:             deps
    hs-source-dirs:     app/todolist
    main-is:            Main.hs

executable todolist0
    import:             deps
    hs-source-dirs:     app/todolist0
    main-is:            Main.hs

