cabal-version:      2.2
name:               webapp
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, scotty, text

executable webapp
    import:             deps
    hs-source-dirs:     app/webapp
    main-is:            Main.hs

executable webapp0
    import:             deps
    hs-source-dirs:     app/webapp0
    main-is:            Main.hs

