cabal-version:      2.2
name:               hspaint
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base,
                        haskell-gi-base,
                        gi-cairo,
                        gi-gdk,
                        gi-glib,
                        gi-gtk,
                        gi-cairo-render,
                        gi-cairo-connector

executable hspaint
    import:             deps
    hs-source-dirs:     app/hspaint
    main-is:            Main.hs

executable hspaint0
    import:             deps
    hs-source-dirs:     app/hspaint0
    main-is:            Main.hs

